--- a/css/main.css
+++ b/css/main.css
@@ -52,7 +52,7 @@ a {
 }
 
 .container {
-  width: 1200px;
+  width: 100%;
   padding-left: 15px;
   padding-right: 15px;
   margin-right: auto;
@@ -320,113 +320,348 @@ button {
   margin-right: auto;
 }
 
-.header {
-  padding-top: 25px;
-  padding-bottom: 25px;
-  border-bottom: 1px solid #ececec;
-}
-
 .div-header {
   display: flex;
+  justify-content: space-between;
   align-items: center;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
-.header-logo-primary {
-  margin-right: 93px;
+@media screen and (min-width: 480px) {
+  .container {
+    width: 470px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+
+.header {
+  position: relative;
+  border-bottom: 1px solid #ececec;
 }
 
 .logo-secondary_theme_dark {
   color: #000000;
 }
 
-.nav-list {
-  display: flex;
-  padding-left: 0;
+@media screen and (max-width: 767px) {
+  .nav-list {
+    display: none;
+  }
+  .contacts {
+    display: none;
+  }
+  .header-logo-primary {
+    padding-top: 16px;
+    padding-bottom: 16px;
+    font-size: 24px;
+    line-height: 1.17;
+  }
+  .mobile-menu-btn {
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    line-height: 0;
+  }
+  .mobile-menu-btn__icon {
+    fill: #000000;
+  }
+  .mobile-menu-btn:hover .mobile-menu-btn__icon {
+    fill: #2196F3;
+  }
+  .mobile-menu {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    overflow: auto;
+    background-color: var(--primary-text-color-light);
+    z-index: 2;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .mobile-menu.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+    padding-bottom: 48px;
+  }
+  .mobile-menu__close-btn {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    line-height: 0;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .mobile-menu__close-btn:hover .mobile-menu__close-icon,
+  .mobile-menu__close-btn:focus .mobile-menu__close-icon {
+    fill: #2196F3;
+  }
+  .mobile-menu__container {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+    padding-top: 48px;
+    padding-bottom: 48px;
+  }
+  .mobile-nav-list__item:not(:last-child) {
+    margin-bottom: 32px;
+  }
+  .mobile-nav-list__link {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 1.18;
+    letter-spacing: 0.02em;
+    color: #212121;
+  }
+  .mobile-curent {
+    color: var(--accent-color);
+  }
+  .mobile-contacts-list {
+    margin-top: 302px;
+    margin-bottom: 64px;
+  }
+  .mobile-contacts-list__item:not(:last-child) {
+    margin-bottom: 32px;
+  }
+  .mobile-social-list {
+    display: flex;
+    align-items: center;
+  }
+  .mobile-social-list__item:not(:last-child) {
+    padding-right: 10px;
+    margin-right: 9px;
+    border-right: 1px solid rgba(33, 33, 33, 0.2);
+  }
+  .mobile-social-list__link {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.22;
+    letter-spacing: 0.02em;
+    color: var(--accent-color);
+  }
+  .mobile-phone {
+    font-weight: 500;
+    font-size: 34px;
+    line-height: 1.18;
+    letter-spacing: 0.02em;
+    color: var(--accent-color);
+  }
+  .mobile-email {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 1.67;
+    letter-spacing: 0.02em;
+    color: var(--secondary-text-color-dark);
+  }
 }
 
-.nav-list__item:not(:last-child) {
-  margin-right: 50px;
+@media screen and (min-width: 768px) {
+  .mobile-menu-btn {
+    display: none;
+  }
+  .mail {
+    width: 14px;
+    height: 10px;
+  }
+  .phone {
+    width: 10px;
+    height: 14px;
+  }
+  .mobile-menu {
+    display: none;
+  }
+  .header {
+    position: relative;
+    border-bottom: 1px solid #ececec;
+  }
+  .header-logo-primary {
+    padding-top: 26px;
+    padding-bottom: 26px;
+    margin-right: 88px;
+    font-size: 24px;
+    line-height: 1.17;
+  }
+  .nav-list {
+    display: flex;
+    padding-left: 0;
+    align-items: center;
+    margin-right: 84px;
+  }
+  .nav-list__item:not(:last-child) {
+    margin-right: 50px;
+  }
+  .underline ::after {
+    content: "";
+    width: 100%;
+    height: 4px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background: var(--accent-color);
+    border-radius: 2px;
+  }
+  .nav-list__link {
+    padding-top: 32px;
+    padding-bottom: 32px;
+    color: inherit;
+    font-family: inherit;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .nav-list__link:hover, .nav-list__link:focus {
+    color: var(--accent-color);
+  }
+  .current {
+    position: relative;
+  }
+  .nav-list .current {
+    color: var(--accent-color);
+  }
+  .contacts {
+    padding-left: 0;
+  }
+  .contact-link {
+    display: flex;
+    align-items: center;
+    color: var(--secondary-text-color-dark);
+    font-family: inherit;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .contact-link:not(:last-child) {
+    margin-bottom: 10px;
+  }
+  .contact-link:hover, .contact-link:focus {
+    color: var(--accent-color);
+  }
+  .mail-item {
+    margin-bottom: 10px;
+  }
+  .contact-icon {
+    fill: currentColor;
+    margin-right: 10px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .contact-icon:hover, .contact-icon:focus {
+    background-color: #2196f3;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  }
 }
 
-.underline ::after {
-  content: "";
-  width: 100%;
-  height: 4px;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  background: var(--accent-color);
-  border-radius: 2px;
-}
-
-.nav-list__link {
-  padding-top: 32px;
-  padding-bottom: 32px;
-  color: inherit;
-  font-family: inherit;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.nav-list__link:hover, .nav-list__link:focus {
-  color: var(--accent-color);
-}
-
-.current {
-  position: relative;
-}
-
-.nav-list .current {
-  color: var(--accent-color);
-}
-
-.contacts {
-  display: flex;
-  padding-left: 0;
-  margin-left: auto;
-}
-
-.contact-link {
-  color: var(--secondary-text-color-dark);
-  font-family: inherit;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.contact-link:hover, .contact-link:focus {
-  color: var(--accent-color);
-}
-
-.contacts .contact-link {
-  display: flex;
-  align-items: center;
-}
-
-.contact-icon {
-  fill: currentColor;
-  margin-right: 10px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.contact-icon:hover, .contact-icon:focus {
-  background-color: #2196f3;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
-
-.mail {
-  width: 16px;
-  height: 12px;
-}
-
-.contact-icon.phone {
-  width: 10px;
-  height: 16px;
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
+  .header {
+    border-bottom: 1px solid #ececec;
+  }
+  .div-header {
+    display: flex;
+    align-items: center;
+  }
+  .header-logo-primary {
+    margin-right: 93px;
+  }
+  .logo-secondary_theme_dark {
+    color: #000000;
+  }
+  .nav-list {
+    display: flex;
+    padding-left: 0;
+  }
+  .nav-list__item:not(:last-child) {
+    margin-right: 50px;
+  }
+  .underline ::after {
+    content: "";
+    width: 100%;
+    height: 4px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background: var(--accent-color);
+    border-radius: 2px;
+  }
+  .nav-list__link {
+    padding-top: 32px;
+    padding-bottom: 32px;
+    color: inherit;
+    font-family: inherit;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .nav-list__link:hover, .nav-list__link:focus {
+    color: var(--accent-color);
+  }
+  .current {
+    position: relative;
+  }
+  .nav-list .current {
+    color: var(--accent-color);
+  }
+  .contacts {
+    display: flex;
+    padding-left: 0;
+    margin-left: auto;
+  }
+  .contact-link {
+    color: var(--secondary-text-color-dark);
+    font-family: inherit;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .contact-link:hover, .contact-link:focus {
+    color: var(--accent-color);
+  }
+  .contacts .contact-link {
+    display: flex;
+    align-items: center;
+  }
+  .contact-icon {
+    fill: currentColor;
+    margin-right: 10px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .contact-icon:hover, .contact-icon:focus {
+    background-color: #2196f3;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  }
+  .mail {
+    width: 16px;
+    height: 12px;
+  }
+  .contact-icon.phone {
+    width: 10px;
+    height: 16px;
+  }
 }
 
 .hero {
